[metadata]
#name = kw-notebook-core-pkg-ken-wakita
name = kw-notebook-core
version = 0.0.10
author = Ken Wakita
author_email = wakita@is.titech.ac.jp
description = Ken's convenience tool for JupyterLab notebooks and Google Colaboratory notebooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wakita/kw_notebook_core
project_urls =
    Bug Tracker = https://github.com/wakita/kw_notebook_core/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
